--- a/docs/custom/css/custom.css
+++ b/docs/custom/css/custom.css
@@ -1,6 +1,6 @@
 
 .wy-nav-content {
-    max-width: 80% !important;
+    max-width: 1000px !important;
 }
 
 .inline-file {
@@ -20,7 +20,7 @@
 }
 
 button.copybtn {
-   color: red;
+   color: rgb(20, 139, 236);
 }
 
 .topic {
