--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -10,3 +10,20 @@
     max-width: 100%;
     height: auto;
 }
+
+.centered-table td,
+.centered-table th {
+    text-align: center;    /* Center text horizontally */
+    vertical-align: middle; /* Optional: center vertically */
+}
+
+table, 
+table th, 
+table td {
+  background-color: transparent !important;
+}
+
+tbody tr:hover {
+  background-color: transparent !important;  /* Remove hover highlight */
+=======
+}
